TINY-9176: Fixed wrong background on toolbar number input buttons

--- a/modules/oxide/src/less/theme/components/toolbar-button/toolbar-number-input.less
+++ b/modules/oxide/src/less/theme/components/toolbar-button/toolbar-number-input.less
@@ -82,7 +82,7 @@
       }
 
       &:focus {
-        background: @toolbar-button-focus-background-color;
+        background: @toolbar-button-bespoke-background-color;
         z-index: 1; // Ensure focus outline is on top of other buttons
 
         &::after {
@@ -136,6 +136,6 @@
 
   .tox-number-input:focus:not(:active) > button,
   .tox-number-input:focus:not(:active) > .tox-input-wrapper {
-    background: @toolbar-button-focus-background-color;
+    background: @toolbar-button-bespoke-background-color;
   }
 }
